NTU-3: Update Http client library and add one required for secure connections.